<resources>
    <string name="app_name">Metropolia Weather App</string>
    <string name="title_activity_preferences">preferencesActivity</string>
    <string name="user_prefs_spinner">User Preferences Spinner</string>
    <string name="weather_types_spinner">Weather Types Spinner</string>
    <string name="pastPrefsView">Past dates verdict</string>
    <string name="listButton">Return</string>
    <string name="dayVerdict">Is it a nice day?</string>
    <string name="weatherRep">Settings</string>
    <string name="weatherData">С°</string>
    <string name="userButton">Settings</string>
    <string name="updateButton">Update</string>
    <string name="listMainActivityButton">List</string>
    <string name="calendarButton">Calendar</string>
    <string name="textViewPrefsActivity">Add a new preference</string>
    <string name="temperature">Temperature (°C)</string>
    <string name="minTempHint">Min.</string>
    <string name="maxTempHint">Max.</string>
    <string name="prefLocation">Location (City)</string>
    <string name="newPref">Name of new preference</string>
    <string name="prefAddButton">Add</string>
    <string name="prefDisplayButton">List</string>
    <string name="homeButton">Home</string>
    <string name="noteSavedPRefs">Note: Hold your finger on an item to delete it.</string>
    <string name="prefButton">Prefs</string>
    <string name="homeButtonActivityPrefs">Home</string>
    <string name="prefName">Preference</string>
    <string name="minTempPrefInfo">Min.</string>
    <string name="maxTempPrefInfo">Max.</string>
    <string name="location">Location</string>
    <string name="weather">Weather</string>
    <string name="listButtonPrefInfo">List</string>
    <string-array name="saved_user_preferences">
        <item></item>
    </string-array>

    <string-array name="weather_types">
        <item>Sunny</item>
        <item>Partly Cloudy</item>
        <item>Cloudy</item>
        <item>Rainy</item>
        <item>Thunderstorm</item>
        <item>Drizzle</item>
        <item>Foggy</item>
        <item>Snowy</item>
    </string-array>
    
    <string-array name="question1">
        <item>Answer</item>
        <item>Answer</item>
        <item>Answer</item>
        <item>Answer</item>
        <item>Answer</item>
    </string-array>
</resources>
